# rust-wallet

./: .gitignore  CHANGELOG.md  Cargo.toml  INTEGRATION_GUIDE.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/bip32/: Cargo.toml  README.md  SECURITY.md
crates/bip32/benches/: key_derivation.rs  serialization.rs
crates/bip32/examples/: key_derivation.rs  wallet_creation.rs  watch_only.rs
crates/bip32/src/: chain_code.rs  child_number.rs  derivation_path.rs  error.rs  extended_private_key.rs  extended_public_key.rs  lib.rs  network.rs  private_key.rs  public_key.rs  utils.rs
crates/bip32/tests/: test_vectors.rs
crates/bip39/: Cargo.toml  README.md
crates/bip39/benches/: benchmarks.rs
crates/bip39/src/: error.rs  language.rs  lib.rs  mnemonic.rs  utils.rs  word_count.rs
crates/bip39/tests/: integration_tests.rs
crates/bip44/: Cargo.toml  README.md
crates/bip44/benches/: bip44_benchmarks.rs
crates/bip44/examples/: basic.rs  discovery.rs  multi_account.rs  multi_coin.rs
crates/bip44/src/: account.rs  builder.rs  derived.rs  discovery.rs  error.rs  iterator.rs  lib.rs  path.rs  types.rs  wallet.rs
crates/bip44/tests/: bsc_address_test.rs  compatibility.rs  edge_cases.rs  evm_address_derivation_test.rs  evm_chains_network_test.rs  integration.rs  test_vectors.rs
crates/flutter_bridge/: BIP32_INTEGRATION.md  BIP39_INTEGRATION.md  BIP44_INTEGRATION.md  BUILD_ALL_SUCCESS.md  BUILD_VERIFICATION.md  Cargo.toml  FLUTTER_INTEGRATION_GUIDE.md  ISSUE_RESOLVED.md  QUICK_START.md  SIGNING_INTEGRATION.md
crates/flutter_bridge/src/: bridge.rs  bridge_generated.rs  lib.rs
crates/khodpay-signing/: Cargo.toml  README.md
crates/khodpay-signing/src/: access_list.rs  address.rs  chain_id.rs  eip712.rs  erc4337.rs  error.rs  lib.rs  rlp_encode.rs  signature.rs  signed_transaction.rs  signer.rs  transaction.rs  wei.rs
crates/khodpay-signing/tests/: bsc_address_generation_test.rs  eip712_erc4337_integration_tests.rs  integration_tests.rs
docs/: BUILD_SUCCESS.md  FLUTTER_API_SUMMARY.md  FLUTTER_INTEGRATION_GUIDE.md  FLUTTER_STRUCT_WRAPPER_EXAMPLE.md  LIBRARY_ORGANIZATION.md  MULTI_PLATFORM_BUILD.md  VERIFICATION.md
docs/implementations/: bip32_tasks.md  bip39_tasks.md  bip44_tasks.md  signing_tasks.md
scripts/: build_all.sh  build_rust.sh  create_universal_ios.sh  generate_bridge.sh  organize_libs.sh  setup_android_env.sh  setup_targets.sh
