[workspace]
members = ["crates/bip39", "crates/bip32", "crates/bip44"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["KhodPay Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/khodpay/rust-wallet"
documentation = "https://docs.rs/khodpay-wallet"
homepage = "https://github.com/khodpay/rust-wallet"
edition = "2021"
rust-version = "1.81"
