[workspace]
members = ["crates/bip39", "crates/bip32", "crates/bip44", "crates/khodpay-signing", "crates/flutter_bridge"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["KhodPay Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/khodpay/rust-wallet"
documentation = "https://docs.rs/khodpay-wallet"
homepage = "https://github.com/khodpay/rust-wallet"
edition = "2021"
rust-version = "1.81"

# Pin dependencies that require edition 2024 to older versions
# until CI runners are updated to Rust 1.85+
[workspace.dependencies]
base64ct = "=1.7.3"
