[package]
name = "bip32"
version = "0.1.0"
edition = "2021"

[dependencies]
bip39 = { path = "../bip39" }
hmac = "0.12"
sha2 = "0.10"
ripemd = "0.1"
bs58 = { version = "0.5", features = ["check"] }
secp256k1 = { version = "0.29", features = ["global-context", "rand-std"] }
thiserror = "1.0"
zeroize = { version = "1.7", features = ["derive"] }
hex = "0.4"

[dev-dependencies]
