[package]
name = "khodpay-bip39"
version = "0.4.0"
edition = "2021"
rust-version = "1.81"
authors = ["KhodPay Team"]
license = "MIT OR Apache-2.0"
description = "Production-ready Rust implementation of BIP39 mnemonic code for cryptocurrency wallets"
repository = "https://github.com/khodpay/rust-wallet"
documentation = "https://docs.rs/khodpay-bip39"
homepage = "https://github.com/khodpay/rust-wallet"
readme = "README.md"
keywords = ["bitcoin", "cryptocurrency", "bip39", "mnemonic", "wallet"]
categories = ["cryptography", "no-std"]

[dependencies]
bip39-upstream = { package = "bip39", version = "2.0", features = ["all-languages"] }
thiserror = "1.0"
rand = "0.8"

[dev-dependencies]
hex = "0.4"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false
