[package]
name = "khodpay-bip44"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
authors = ["KhodPay Team"]
license = "MIT OR Apache-2.0"
description = "Production-ready Rust implementation of BIP44 multi-account hierarchy for deterministic wallets"
repository = "https://github.com/khodpay/rust-wallet"
documentation = "https://docs.rs/khodpay-bip44"
homepage = "https://github.com/khodpay/rust-wallet"
readme = "README.md"
keywords = ["hdwallet", "bip44", "bip49", "bip84", "bip86"]
categories = ["cryptography", "no-std"]

[dependencies]
khodpay-bip32 = { version = "0.2.0", path = "../bip32" }
khodpay-bip39 = { version = "0.2.0", path = "../bip39" }
thiserror = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"
criterion = "0.5"

[[bench]]
name = "bip44_benchmarks"
harness = false

[features]
default = []
serde = ["dep:serde"]
