[package]
name = "khodpay-signing"
version = "0.1.0"
edition = "2021"
authors = ["Khodpay"]
description = "EVM transaction signing for BSC and other EVM chains"
license = "MIT OR Apache-2.0"
repository = "https://github.com/khodpay/khodpay-wallet"
keywords = ["bsc", "ethereum", "evm", "signing", "transaction"]
categories = ["cryptography", "cryptocurrency"]

[dependencies]
# Internal dependencies
khodpay-bip32 = { path = "../bip32" }
khodpay-bip44 = { path = "../bip44" }

# Error handling
thiserror = "1.0"

# RLP encoding
rlp = "0.5"

# Cryptography
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"

# U256 for Wei
primitive-types = { version = "0.12", features = ["rlp"] }

# Security
zeroize = { version = "1.7", features = ["derive"] }

# Optional serialization
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
hex = "0.4"
