[package]
name = "khodpay-signing"
version = "0.2.0"
edition = "2021"
authors = ["Khodpay"]
description = "EVM signing: EIP-1559 transactions, EIP-712 typed data, and ERC-4337 UserOperation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/khodpay/khodpay-wallet"
keywords = ["eip712", "erc4337", "ethereum", "signing", "account-abstraction"]
categories = ["cryptography", "no-std"]

[dependencies]
# Internal dependencies
khodpay-bip32 = { version = "0.2.0", path = "../bip32" }
khodpay-bip44 = { version = "0.1.0", path = "../bip44" }

# Error handling
thiserror = "1.0"

# RLP encoding
rlp = "0.5"

# Cryptography
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"

# U256 for Wei
primitive-types = { version = "0.12", features = ["rlp"] }

# Hex encoding
hex = "0.4"

# Security
zeroize = { version = "1.7", features = ["derive"] }

# Optional serialization
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[features]
default = []
serde = ["dep:serde"]
eip712 = ["serde", "dep:serde_json"]
erc4337 = ["eip712"]

[dev-dependencies]
khodpay-bip39 = { version = "0.4.0", path = "../bip39" }
